--- a/customize/lights.yaml
+++ b/customize/lights.yaml
@@ -1,4 +1,4 @@
-  light.kitchen_level_5_0:
+  light.leviton_unknown_type1b03_id0334_level_3_0:
     friendly_name: Kitchen Lights
     icon: mdi:ceiling-light  
   light.chair_light:
