--- a/automation/light_automations/all_lights_off.yaml
+++ b/automation/light_automations/all_lights_off.yaml
@@ -2,6 +2,10 @@ alias: 'Turn Off Ourdoor lights @ 1am'
 trigger:
   platform: time
   at: '01:00:00'
+condition:
+  condition: state
+  entity_id: input_boolean.light_automation
+  state: 'on'
 action:
   service: light.turn_off
   entity_id: group.outdoor_lights
