--- a/automation/light_automations/living_room.yaml
+++ b/automation/light_automations/living_room.yaml
@@ -1,12 +1,17 @@
-  alias: Turn on light when sun sets
-  trigger:
-    platform: sun
-    event: sunset
-    offset: "-01:00:00"
-  condition:
-    condition: state
-    entity_id: group.family
-    state: 'home'
-  action:
-    service: light.turn_on
-    entity_id: group.living_room_lights
+alias: Turn on light when sun sets
+trigger:
+  platform: sun
+  event: sunset
+  offset: "-01:00:00"       
+condition:
+  condition: and
+  conditions:
+    - condition: state
+      entity_id: group.family
+      state: 'home'
+    - condition: state
+      entity_id: input_boolean.light_automation
+      state: 'on'
+action:
+  service: light.turn_on
+  entity_id: group.living_room_lights
