--- a/automation/light_automations/porch_light.yaml
+++ b/automation/light_automations/porch_light.yaml
@@ -4,9 +4,14 @@ trigger:
   event: sunset
   offset: "-01:00:00"
 condition:
-  condition: state
-  entity_id: group.input_boolean_presence
-  state: 'on'
+  condition: and
+  conditions:
+    - condition: state
+      entity_id: group.input_boolean_presence
+      state: 'on'
+    - condition: state
+      entity_id: input_boolean.light_automation
+      state: 'on'
 action:
   service: light.turn_on
   entity_id: light.porch_light
