--- a/automation/presence_automations/robb_away.yaml
+++ b/automation/presence_automations/robb_away.yaml
@@ -1,7 +1,7 @@
 alias: "Mark Robb Away"
 condition:
   condition: state
-  entity_id: input_boolean.robb_home    
+  entity_id: input_boolean.robb 
   state: 'on'
 # Will only trigger if all are 'not_home'
 trigger:
@@ -9,4 +9,4 @@ trigger:
   value_template: "{% if (is_state('device_tracker.robb_parker_galaxy_s5','not_home')) and (is_state('device_tracker.phone_robb_','not_home')) %}true{% endif %}"
 action:
   service: homeassistant.turn_off
-  entity_id: input_boolean.robb_home
+  entity_id: input_boolean.robb
