--- a/automation/presence_automations/robb_home.yaml
+++ b/automation/presence_automations/robb_home.yaml
@@ -1,15 +1,16 @@
 alias: 'Mark Robb Home'
 condition:
   condition: state
-  entity_id: input_boolean.robb_home
+  entity_id: input_boolean.robb
   state: 'off'
 trigger:
   - platform: state
     entity_id: device_tracker.phone_robb_
-    state: 'home' 
+    to: 'home' 
   - platform: state
     entity_id: device_tracker.robb_parker_galaxy_s5
-    state: 'home'      
+    to: 'home'      
 action:
    service: homeassistant.turn_on
-   entity_id: input_boolean.robb_home
+   entity_id: input_boolean.robb
+ 
